--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -17,7 +17,6 @@
 	<div class="edition_mode">
 		<i class="fa-regular fa-pen-to-square"></i>
 		<p>Mode édition</p>
-		
 	</div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
@@ -52,12 +51,12 @@
 			</button>
 		</div>
 
-		<!-- modale -->
 		<!-- Overlay -->
     	<div class="overlay" id="overlay"></div>
 
+		<!-- modales -->
 		<dialog class="modal" id="modal">
-			<!-- Modale 1 -->
+			<!-- Modale 1 : gallerie -->
 			<div class="modal1" id="modal1">
 				<button class="modal__close" id="modalClose"><i class="fa-solid fa-xmark"></i>
 				</button>
@@ -71,7 +70,7 @@
 				</div>
 			</div>
 
-			<!-- Modale 2 -->
+			<!-- Modale 2 : ajout projet -->
 			<div class="modal2" id="modal2">
 				<button class="modal__back" id="backButton"><i class="fa-solid fa-arrow-left"></i>
 				</button>
@@ -101,8 +100,6 @@
 						<div class="modal__footer__line"></div>
 						<button class="modal__footer__button2" id="valider" disabled>Valider</button>
 					</div>
-
-
 				</form>	
 			</div>
 		</dialog>
@@ -111,8 +108,8 @@
 		</div>
 
 		<div class="gallery">
-
 		</div>
+
 	</section>
 	<section id="contact">
 		<h2>Contact</h2>
